Add new method to blog.rb and tests for server

--- a/Week 2/Day 4/sinatra-blog/views/post_details.erb
+++ b/Week 2/Day 4/sinatra-blog/views/post_details.erb
@@ -8,7 +8,7 @@
   <h2>Blog of <%= @blogname%></h2>
   <br>
   <br>
-  <h3>Title: <%= @title %></h3>
+  <h3>Title: <%= @title %> <%=@class%>
   <h5>Date: <%= @date %></h5>
   <h4>Content: <%= @text %></h4>
   <h4>Author: <%= @author %></h4>
