--- a/Week_4/Day_3/auction/app/views/product/info.html.erb
+++ b/Week_4/Day_3/auction/app/views/product/info.html.erb
@@ -3,3 +3,9 @@
 <h2><%= @product.description %></h2>
 <h3>Deadline: <%= @product.deadline %></h3>
 <h4>User: <%= @product.user.name %></h4>
+<h1>Bids</h1>
+<ul>
+  <% @bids.each do |bid| %>
+  <li><%= bid.amount %>€ - <%= bid.user.name %></li>
+  <% end %>
+</ul>
