Add auction exercice until iteration 2

--- a/Week_4/Day_3/auction/app/views/product/info.html.erb
+++ b/Week_4/Day_3/auction/app/views/product/info.html.erb
@@ -3,9 +3,30 @@
 <h2><%= @product.description %></h2>
 <h3>Deadline: <%= @product.deadline %></h3>
 <h4>User: <%= @product.user.name %></h4>
+<h3>Time to deadline: <%="#{@dd} days, #{@hh} hours, #{@mm} minutes"%></h3>
+
+<h2>Best bid: <%= @bestbid.amount %>€ - <%=@bestbid.user.name%></h2>
 <h1>Bids</h1>
 <ul>
   <% @bids.each do |bid| %>
   <li><%= bid.amount %>€ - <%= bid.user.name %></li>
   <% end %>
 </ul>
+<br><br>
+
+<% if @timeto < 0 %>
+  <h1>Winner</h1>
+  <h2>Winner: <%= bid.user.name %></h2>
+<% else %>
+<h1>Add Bid</h1>
+  <%= form_for @bid do |f| %>
+    <%= f.label :amount %>
+    <%= f.number_field :amount %>
+
+    <%= f.label 'User email' %>
+    <%= f.email_field :user_id %>
+    <%= f.hidden_field :product_id, :value => @product.id%>
+
+    <%= f.button %>
+  <% end %>
+<% end %>
