Add sessions users

--- a/Week_4/Day_3/auction/app/views/layouts/application.html.erb
+++ b/Week_4/Day_3/auction/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <header>
+      <h2>Hello <%= User.find_by_id(session[:current_user_id]).name %>!</h2>
+    </header>
     <%= yield %>
   </body>
 </html>
