--- a/Week_4/Day_3/auction/app/views/product/new.html.erb
+++ b/Week_4/Day_3/auction/app/views/product/new.html.erb
@@ -10,8 +10,8 @@
   <%= f.label :deadline %>
   <%= f.datetime_field :deadline %>
 
-  <%= f.label 'User email' %>
-  <%= f.email_field :user_id %>
+  <%= f.label :minimun_bid %>
+  <%= f.number_field :minimun_bid %>
 
   <%= f.button %>
 <% end %>
