--- a/Week_4/Day_3/auction/app/views/product/info.html.erb
+++ b/Week_4/Day_3/auction/app/views/product/info.html.erb
@@ -2,6 +2,12 @@
 <h2><b><%= @product.title %></b></h2>
 <h2><%= @product.description %></h2>
 <h4>User: <%= @product.user.name %></h4>
+<% if @product.user.id == session[:current_user_id] %>
+ <%= form_tag("/product/destroy", method: "delete") do %>
+ <%= hidden_field_tag(:product_id, @product.id) %>
+ <%= submit_tag("Destroy") %>
+ <% end %>
+<% end %>
 <% if @timeto < 0 %>
 <h3>Time to deadline: FINISH!</h3>
 <% else %>
@@ -20,18 +26,20 @@
 <br><br>
 
 <% if @timeto < 0 %>
+  <% if @bestbid %>
   <h1>Winner</h1>
   <h2>Winner: <%= @bestbid.user.name %></h2>
+  <% else %>
+  <h2>No winner!</h2>
+  <% end %>
 <% else %>
 <h1>Add Bid</h1>
   <%= form_for @bid do |f| %>
     <%= f.label :amount %>
-    <%= f.number_field :amount %>
+    <%= f.number_field :amount, placeholder: "Minimun bid: #{@minimunbid + 1}€" %>
 
-    <%= f.label 'User email' %>
-    <%= f.email_field :user_id %>
     <%= f.hidden_field :product_id, :value => @product.id%>
-
+    <%= f.hidden_field :minimunbid, :value => @minimunbid%>
     <%= f.button %>
   <% end %>
 <% end %>
