--- a/Week_5/extras/snake.css
+++ b/Week_5/extras/snake.css
@@ -3,8 +3,11 @@
     padding: 0;
     border: 0;
 }
+body {
+  background-color: #ddd;
+}
 .container {
-    width: 500px;
+    width: 500px!important;
     margin: 50px auto;
 }
 .container div {
