--- a/Week_6/Day_2/auction/app/views/user/show.html.erb
+++ b/Week_6/Day_2/auction/app/views/user/show.html.erb
@@ -1,6 +1,8 @@
-<h1>Users</h1>
-<ul>
-<% @users.each do |user| %>
-<li><%= user.name %> - <%= user.email %></li>
+<h1><%= current_user.name %></h1>
+<br><br>
+<h2>Reviews:</h2>
+<% current_user.reviews.each do |review| %>
+<h3><%= review.product.title %></h3>
+<h4><%= review.description %></h4>
+<br>
 <% end %>
-</ul>
